--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,6 @@
     <title>¡Warning! | DATABASE.</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    <meta http-equiv="refresh" content="1"/>
 
 </head>
 
@@ -44,18 +43,14 @@
     <nav class="container1">
         <h3>¡Please sign up and show your support!</h3>
 
-        <form action="processname.cgi" method="post">
+        <form action="processData.php" method="post">
             <div id="signup">
 
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="user_name" placeholder="Enter Name">
-                <br>
-                <label for="mail">Mail:</label>
-                <input type="mail" id="mail" name="user_mail" placeholder="Enter Mail">
-                <br>
-                <label for="msg">Reason:</label>
-                <textarea id="msg" name="user_message"></textarea>
-                <button onclick="fupdatelimit()">Submit</button>
+                <p><label>Name:</label><input type="text" name="name" placeholder="Enter Name" /></p>
+                
+                <p><label>Mail:</label><input type="text" name="mail" placeholder="Enter Mail" /></p>
+
+                <p><input type="submit" value="submit" /></p>
             </div>
         </form>
     </nav>
