--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>¡Warning! | DATABASE.</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    <meta http-equiv="refresh" content="1"/>
 
 </head>
 
@@ -14,12 +13,12 @@
         <nav class="topmenu">
             <div class="master">
                 <div id="centeredmenu">
-                    <p>v. 12.9.34</p>
+                    <p class="leftsidemenu">v. 12.9.34</p>
                     <h1 class="titel">database.</h1>
                     <h2>Be quite about this site.</h2>
                     <ul>
                         <li><a href="index.html">info</a></li>
-                        <li><a href="page2.html">view</a></li>
+                        <li><a href="documents.html">documents</a></li>
                         <li><a href="page3.html">games</a></li>
                         <li><a href="signup.html">sign up</a></li>
                     </ul>
@@ -37,19 +36,23 @@
                           <input type="checkbox" checked="checked" name="remember"> Remember me
                         </label>
                     </div>
+                    <script src="script.js"></script>
                 </form>
             </div>
         </nav>
     </header>
     <div class="content">
-        <p class="nonsense">r s p d c p l k p k h x d c f r b s j s q o z o c j h m d p h g t t h x r d z x n w n i g e m h x y f n v v q g m z a a i r v o v h f e h v t w o b r h v z j p a s k w b o p j v w w t e q t l k s w m k z g i c o j t w h w v f c l g n y t z x k p v h j z g s h i e u q z j d r s r b g g w e w l r m e z i g x s w n u m l x u g o z t f h n f o d n y x k d c p t u k n c d d g m a w m f c f l t d r j d </p>
+        <p class="nonsense">r s p d c p l k p k h x d c f r b s j s q o z o c j h m d p h g t t h x r d z x n w n i g e m h x y f n v v q g m z a a i r v o v h f e h v t w o b r h v z j p a s k w b o p j v w w t e q t l k s w m k z g i c o j t w h w v f c l g n y t z x k
+            p v h j z g s h i e u q z j d r s r b g g w e w l r m e z i g x s w n u m l x u g o z t f h n f o d n y x k d c p t u k n c d d g m a w m f c f l t d r j d </p>
         <h2>Information.</h2>
-        <p class="idiot">This is a website created for you and only you. This website is confusing due to the fact, that it contains extremely important information. I'm here to help you with your life, homework etc. <br> I hope you enjoy this website, and if you are able to read it, you honestly deserve this content. As you follow the links above, you will find out, that this website is very useful. I'm an anonymous creator - it doesn't matter who i am. I'm not responsible for any of this content!</p>
+        <p class="idiot">This is a website created for you and only you. This website is confusing due to the fact, that it contains extremely important information. I'm here to help you with your life, homework etc. <br> I hope you enjoy this website, and if you are
+            able to read it, you honestly deserve this content. As you follow the links above, you will find out, that this website is very useful. I'm an anonymous creator - it doesn't matter who i am. I'm not responsible for any of this content!</p>
         <div class="container">
             <img src="anon.png" id="imagenon">
         </div>
-        <p class="nonsense">r s p d c p l k p k h x d c f r b s j s q o z o c j h m d p h g t t h x r d z x n w n i g e m h x y f n v v q g m z a a i r v o v h f e h v t w o b r h v z j p a s k w b o p j v w w t e q t l k s w m k z g i c o j t w h w v f c l g n y t z x k p v h j z g s h i e u q z j d r s r b g g w e w l r m e z i g x s w n u m l x u g o z t f h n f o d n y x k d c p t u k n c d d g m a w m f c f l t d r j d </p>
+        <p class="nonsense">r s p d c p l k p k h x d c f r b s j s q o z o c j h m d p h g t t h x r d z x n w n i g e m h x y f n v v q g m z a a i r v o v h f e h v t w o b r h v z j p a s k w b o p j v w w t e q t l k s w m k z g i c o j t w h w v f c l g n y t z x k
+            p v h j z g s h i e u q z j d r s r b g g w e w l r m e z i g x s w n u m l x u g o z t f h n f o d n y x k d c p t u k n c d d g m a w m f c f l t d r j d </p>
     </div>
-
 </body>
+
 </html>
