--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <title>¡Warning! | DATABASE.</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <script type="text/javascript" src="script.js"></script>
 
 </head>
 
@@ -18,7 +19,7 @@
                     <h2>Be quite about this site.</h2>
                     <ul>
                         <li><a href="index.html">info</a></li>
-                        <li><a href="page2.html">view</a></li>
+                        <li><a href="documents.html">documents</a></li>
                         <li><a href="page3.html">games</a></li>
                         <li><a href="signup.html">sign up</a></li>
                     </ul>
@@ -43,12 +44,12 @@
     <nav class="container1">
         <h3>¡Please sign up and show your support!</h3>
 
-        <form action="processData.php" method="post">
+        <form onsubmit="WriteToFile(this)" " method="post">
             <div id="signup">
 
-                <p><label>Name:</label><input type="text" name="name" placeholder="Enter Name" /></p>
+                <p><label>Name:</label><input type="text" name="name" id="name" placeholder="Enter Name" /></p>
                 
-                <p><label>Mail:</label><input type="text" name="mail" placeholder="Enter Mail" /></p>
+                <p><label>Mail:</label><input type="text" name="mail" id="mail" placeholder="Enter Mail" /></p>
 
                 <p><input type="submit" value="submit" /></p>
             </div>
