--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                           <input type="checkbox" checked="checked" name="remember"> Remember me
                         </label>
                     </div>
-                    <script src="script.js"></script>
+                    <script type="text/javascript" src="script.js"></script>
                 </form>
             </div>
         </nav>
